WIP updates for next Aeron release